feat: Sonar fixes